src/scss/main.scss
/* ... */
.strong__header {
  font-weight: 500;
}

//main
.main {
  margin: 4rem 1rem 0 1rem;
}

// hero
.hero {
  text-align: center;

  &__header {
    font-size: 26px;
    font-weight: 500;
    line-height: 36px;
    padding: 0 2rem;
    text-align: center;
    animation: 200ms 500ms linear both heroHeader;
    margin: 0;

    @media (min-width: 1184px) {
      display: flex;
      align-items: center;
      justify-content: center;
      font-size: 40px;
      line-height: 56px
    }

    &::after {
      content: " </>";
      display: flex;
      justify-content: center;
      margin-top: 8px;
      transform: rotate(15deg);
      background: -webkit-linear-gradient(#eee, #333);
      background-clip: text;
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;

      @media (min-width: 1184px) {
        margin: 20px;
      }
    }
  }

  @media (min-width: 1184px) {
    background: rgb(78, 204, 111);
    background: -moz-radial-gradient(circle, rgba(78, 204, 111, 1) 0%, rgba(255, 255, 255, 0) 62%);
    background: -webkit-radial-gradient(circle, rgba(78, 204, 111, 1) 0%, rgba(255, 255, 255, 0) 62%);
    background: radial-gradient(circle, rgba(78, 204, 111, 1) 0%, rgba(255, 255, 255, 0) 60%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#4ecc6f", endColorstr="#ffffff", GradientType=1);
  }
}

// article
.article {
  @media(min-width: 1184px) {
    width: 100%;
    max-width: 1184px;
    margin: 0 auto;

  }

  &__header {
    margin: 44px 0 60px 0;
    font-weight: 500;
    text-align: center;

    @media (min-width: 1184px) {
      font-size: 36px;
      line-height: 48px
    }
  }

  &__nav {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    transform: translateY(-100%);
    transition: transform 0.3s ease;

    @media (min-width: 1184px) {
      position: sticky;
      top: 0;
      left: 0;
      transform: none;
      z-index: 2;
    }

    &--on {
      transform: translateY(0);
    }

    &--off {
      transform: translateY(-100%);

      @media (min-width: 1184px) {
        transform: none;
      }
    }

  }

  &__menu {
    @media (min-width: 1184px) {
      display: flex;
      justify-content: center;
      align-items: center;
      flex-wrap: wrap;
    }
  }

  &__list {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0;
    padding: 16px 8px 32px;
    list-style: none;
    background: #ffa07a;

    @media (min-width: 1184px) {
      flex-direction: row;
      justify-content: center;
      width: 100%;
      padding: 0;
      margin: 10px 0;

      &::before {
        content: "";
        display: none;
      }
    }

    &::before {
      content: "";
      position: absolute;
      bottom: 0;
      right: 0;
      width: 100%;
      height: 20px;
      background-image: linear-gradient(45deg, black 25%, #FFC16E 25%, #FFC16E 50%, black 50%, black 75%, #FFC16E 75%, #FFC16E 100%);
      background-image: linear-gradient(45deg, black 25%, #FFC16E 25%, #FFC16E 50%, black 50%, black 75%, #FFC16E 75%, #FFC16E 100%);
      background-size: 56.57px 56.57px;
    }

    &::after {
      @media (min-width: 1184px) {
        content: "\25BA";
        display: block;
        font-size: 2rem;
        margin-left: 30px;
        transform: rotate(180deg);
        animation: heroHeader 1s linear 1.5s infinite alternate both;
      }
    }
  }

  &__item {
    width: 100%;

    @media (min-width: 1184px) {
      width: auto;
    }
  }

  &__link {
    display: block;
    text-decoration: none;
    text-transform: uppercase;
    color: #171F3F;
    padding: 8px;
    text-align: center;
    transition: background-color .2s linear;
    font-size: 18px;
    font-weight: 500;
    line-height: 36px;

    &:hover {
      background-color: rgba(0, 0, 0, 0.15);

      @media (min-width: 1184px) {
        color: #1a1a1a;
      }
    }
  }

  &__paragraph {
    margin: 0;
    line-height: 26px;
    text-align: center;

    @media (min-width: 1184px) {
      max-width: 1184px;
      width: 100%;
      margin: 20px auto;
      font-size: 20px;
      line-height: 36px;
    }
  }

  &__button {
    left: 0;
    transform: rotate(0deg);
    z-index: 3;

    @media (min-width: 1184px) {
      display: none;
    }
  }
}

//wrapper
.wrapper {
  margin: 40px 0 80px 0;
}
/* ... */

